# crazcalm_website

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  dockerignore
html/: README.md  index.html
html/css/: main.css
html/img/youtube_full_color_icon/digital_and_tv/: yt_icon_rgb.ai
html/img/youtube_full_color_icon/print/: yt_icon_cymk.ai  yt_icon_pms.ai
html/static/: site.webmanifest
src/: main.rs
