[package]
name = "crazcalm_website"
version = "0.1.0"
authors = ["Marcus Willock <crazcalm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"]}
warp = "0.2"
log = "0.4"
json_env_logger = { version = "0.1", features = ["iso-timestamps"] }
kv-log-macro = "1.0"
