[package]
name = "crazcalm_website"
version = "0.1.1"
authors = ["Marcus Willock <crazcalm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
warp = "0.3"
log = "0.4"
env_logger = "0.9.0"
