[package]
name = "crazcalm_website"
version = "0.1.2"
authors = ["Marcus Willock <crazcalm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
warp = {git = "https://github.com/seanmonstar/warp.git", rev="4e9c4fd6ce238197fd1088061bbc07fa2852cb0f"}
log = "0.4"
env_logger = "0.9.0"
